{
    "name": "Input_Basic",
    "maps": [
        {
            "name": "Base",
            "id": "b267d258-d06d-4f73-8017-783427c6fc93",
            "actions": [
                {
                    "name": "CursorPosition",
                    "type": "Value",
                    "id": "ead18ff9-19f9-4c0f-9fcb-9b2111f225a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Select_Click",
                    "type": "Value",
                    "id": "5aa7c70f-83e5-4a3c-b874-48aa5ed77416",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack_Click",
                    "type": "Value",
                    "id": "992cca55-222b-493e-8556-64cc467473fa",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ControllerAxis",
                    "type": "Value",
                    "id": "3fa2b177-4f46-410b-87a3-99d7481abc82",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d76b9d1-7d5a-4188-98df-b06c16a0570f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0fd50850-a384-402d-bf52-7f32aaa109a8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select_Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0eb7aaf5-a2fb-48e8-b511-7afc143c4ad7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack_Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Digital",
                    "id": "53f9ebba-dca2-4394-a6a8-0cb9b00733fe",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAxis",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f25959af-51fe-49c6-b5dd-dd7c877a2b94",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a83ff87d-db23-4d72-924c-e10af44955de",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "99d466dd-094e-4a95-bfce-3ec1ddd52c2b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "54bc77be-a329-4528-bdcb-af902e2673c5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAxis",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a9f31d9f-eefd-4314-b6d4-347d30adbb10",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}